--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ flutter:
   assets:
     - assets/images/bernat.png
     - assets/images/cat.png
+    - assets/images/aiguestortes.png
+    - assets/images/deltaebre.png
+    - assets/images/montserrat.png
+    assets/images/
   fonts:
     - family: LibreBaskerville
       fonts:
